--- a/src/ChatApp/wwwroot/templates/room/modal-members-remove.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-members-remove.html
@@ -1,11 +1,11 @@
-<div class="modal-header">
-    <h3 class="modal-title">
-        <span>メンバーの削除</span>
-        <a class="pull-right" ng-click="ctrl.close()">
-            <i class="glyphicon glyphicon-remove-sign"></i>
-        </a>
-    </h3>
-</div>
 <div class="modal-body">
-    <div ng-include="'../templates/room/modal-members-list.html'"></div>
+    <div class="modal-header">
+        <h3 class="modal-title">
+            <span>メンバーの削除</span>
+            <a class="pull-right" ng-click="ctrl.close()">
+                <i class="glyphicon glyphicon-remove-sign"></i>
+            </a>
+        </h3>
+    </div>
+    <div class="modal-main" ng-include="'../templates/room/modal-members-list.html'"></div>
 </div>
