--- a/src/ChatApp/wwwdev/less/manage/index.less
+++ b/src/ChatApp/wwwdev/less/manage/index.less
@@ -1,15 +1,4 @@
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-.circlebox(@size) {
-    display: inline-block;
-    width: @size;
-    height: @size;
-    border-radius: 50%;
-    overflow: hidden;
-}
+@import "../_common";
 
 .main-contents {
     .alert {
@@ -28,12 +17,12 @@
                 }
 
                 .avatar {
-                    .circlebox(200px);
+                    .__circle_box__(200px);
 
                     img {
                         width: 100%;
                         height: 100%;
-                        animation: fadeIn 3s ease 0s 1 normal;
+                        animation: __fadein__opacity__ 3s ease 0s 1 normal;
                     }
                 }
             }
@@ -42,10 +31,10 @@
 }
 
 #imageClipModal {
-    padding: 30px;
+    padding-top: 30px;
 
     .clip-image {
-        .circlebox(250px);
+        .__circle_box__(252px);
 
         margin: 0;
         padding: 0;
@@ -56,27 +45,9 @@
         }
     }
 
-    .modal-header {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
+    .modal-content {
+        .__modal-content__();
 
-    .modal-body {
-        background-color: #fff;
-
-        & > div {
-            padding: 10px 0;
-            text-align: center;
-        }
-    }
-
-    .modal-footer {
         text-align: center;
-        padding-top: 3px;
-        padding-bottom: 3px;
     }
-}
-
-.modal-backdrop {
-    background-color: transparent;
 }
