--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -1,22 +1,4 @@
-
-@keyframes fadeIn {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-
-* {
-    box-sizing: border-box;
-
-    &::-webkit-scrollbar {
-        width: 7px;
-        background: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb, thumb {
-        background: rgba(200, 200, 200, 0.5);
-        border-radius: 10px;
-    }
-}
+@import "../_common";
 
 body {
     overflow: hidden;
@@ -28,19 +10,22 @@ li {
     }
 }
 
+.modal-content {
+    .__modal-content__();
+}
+
+// サイドバー
 #chat-sidebar-wrapper {
     height: calc(~'100vh - 50px');
     padding-right: 0;
     z-index: 1000;
 
     .chat-sidebar-toggle {
+        .__circle_box__(42px);
         top: 50%;
         display: block;
         position: absolute;
         margin-top: -17.5px - 25px;
-        width: 42px;
-        height: 42px;
-        border-radius: 50%;
         color: #ccc;
         font-size: 1.5em;
 
@@ -132,6 +117,7 @@ li {
     }
 }
 
+// チャットメッセージ
 #chat-messages {
     .message-list {
         .message-item {
@@ -153,13 +139,13 @@ li {
                     border: 1px solid #ccc;
                     border-radius: 5px;
                     padding: 3px;
-                    //animation: fadeIn 1s ease 0s 1 normal;
                 }
             }
         }    
     }
 }
 
+// メッセージ投稿フォーム
 #chat-messages-form {
     position: relative;
     padding: 10px 10px 0 10px;
@@ -177,12 +163,11 @@ li {
         bottom: -5px;
         opacity: 1;
         right: 0;
-        height: 50px;
-        width: 50px;
-        border-radius: 50%;
+        .__circle_box__(50px);
     }
 }
 
+// ルーム詳細モーダル
 .room-detail {
     div {
         padding: 10px; 
@@ -191,5 +176,16 @@ li {
     .description {
         min-height: 5em;
         white-space: pre-wrap;
+    }
+}
+
+// ルーム画像編集モーダル
+.modal_room_edit_image {
+    text-align: center;
+
+    [chat-image-cliper] {
+        .__square_box__(250px);
+        border: 1px solid #ccc;
+        border-radius: 10px;
     }
 }
