--- a/src/ChatApp/wwwroot/css/room/main.css
+++ b/src/ChatApp/wwwroot/css/room/main.css
@@ -1,4 +1,4 @@
-@keyframes fadeIn {
+@keyframes __fadein__opacity__ {
   0% {
     opacity: 0;
   }
@@ -18,11 +18,31 @@
   background: rgba(200, 200, 200, 0.5);
   border-radius: 10px;
 }
+.modal-backdrop {
+  background-color: transparent;
+}
 body {
   overflow: hidden;
 }
 li[role="menuitem"] {
   cursor: pointer;
+}
+.modal-content {
+  background-color: #fff;
+}
+.modal-content .modal-header {
+  background-color: #fff;
+  padding: 0 0 10px 10px;
+}
+.modal-content .modal-header .modal-title {
+  font-size: 1.4em;
+}
+.modal-content .modal-main {
+  background-color: #fff;
+  padding: 10px;
+}
+.modal-content .modal-footer {
+  background-color: #fff;
 }
 #chat-sidebar-wrapper {
   height: calc(100vh - 50px);
@@ -30,13 +50,16 @@ li[role="menuitem"] {
   z-index: 1000;
 }
 #chat-sidebar-wrapper .chat-sidebar-toggle {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 42px;
+  height: 42px;
+  overflow: hidden;
+  border-radius: 50%;
   top: 50%;
   display: block;
   position: absolute;
   margin-top: -42.5px;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
   color: #ccc;
   font-size: 1.5em;
 }
@@ -144,8 +167,11 @@ li[role="menuitem"] {
   bottom: -5px;
   opacity: 1;
   right: 0;
-  height: 50px;
+  display: inline-block;
+  box-sizing: border-box;
   width: 50px;
+  height: 50px;
+  overflow: hidden;
   border-radius: 50%;
 }
 .room-detail div {
@@ -154,4 +180,16 @@ li[role="menuitem"] {
 .room-detail .description {
   min-height: 5em;
   white-space: pre-wrap;
+}
+.modal_room_edit_image {
+  text-align: center;
+}
+.modal_room_edit_image [chat-image-cliper] {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
