--- a/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
@@ -1,26 +1,21 @@
-<div class="modal-header">
-    <h3 class="modal-title">
-        <span>ルームの画像編集</span>
-        <a class="pull-right" ng-click="ctrl.close()">
-            <i class="glyphicon glyphicon-remove-sign"></i>
-        </a>
-    </h3>
-</div>
-<div class="modal-body">
-    <div class="container-fluid" style="text-align: center;">
+<div class="modal-body modal_room_edit_image">
+    <div class="modal-header">
+        <h3 class="modal-title">
+            <span>ルームの画像編集</span>
+            <a class="pull-right" ng-click="ctrl.close()">
+                <i class="glyphicon glyphicon-remove-sign"></i>
+            </a>
+        </h3>
+    </div>
+    <div class="modal-main">
         <div>
-            <span class="clip-image" chat-image-cliper
-                c:ctrl="ctrl" c:assign="c"
-                c:option="{zoomStep: 10, imageType: 'image/png'}"
-                style="display: inline-block; width: 250px; height:250px; border-radius: 10px; overflow: hidden;">
+            <span class="clip-image" chat-image-cliper c:ctrl="ctrl" c:assign="c" c:option="{zoomStep: 10, imageType: 'image/png'}">
                 <img src="" />
             </span>
         </div>
         <div>
-            <input type="range" ng-change="ctrl.changeRange()"
-                ng-model="ctrl.c.range.val"
-                min="{{ ctrl.c.range.min }}"
-                max="{{ ctrl.c.range.max }}" tabindex="-1" />
+            <input type="range" ng-change="ctrl.changeRange()" ng-model="ctrl.c.range.val" min="{{ ctrl.c.range.min }}" max="{{ ctrl.c.range.max }}"
+                tabindex="-1" />
         </div>
     </div>
     <div class="modal-footer" style="text-align: center;">
