タスク #87 LESSファイルを分割

--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -1,5 +1,3 @@
-@import "../_common";
-
 body {
     overflow: hidden;
 }
@@ -10,182 +8,7 @@ li {
     }
 }
 
-.modal-content {
-    .__modal-content__();
-}
-
-// サイドバー
-#chat-sidebar-wrapper {
-    height: calc(~'100vh - 50px');
-    padding-right: 0;
-    z-index: 1000;
-
-    .chat-sidebar-toggle {
-        .__circle_box__(42px);
-        top: 50%;
-        display: block;
-        position: absolute;
-        margin-top: -17.5px - 25px;
-        color: #ccc;
-        font-size: 1.5em;
-
-        &.chat-sidebar-open {
-            left: 0;
-            margin-left: -17.5px;
-        }
-
-        &.chat-sidebar-close {
-            right: 0;
-        }
-    }
-
-    #chat-sidebar {
-        padding: 0 0 0 10px;
-        background: #fff;
-        left: 0;
-        border-right: 1px solid #eee;
-        font-size: 0.8em;
-
-        .chat-sidebar-content {
-            padding-bottom: 10px;
-            padding-right: 8px;
-            background: #fff;
-            padding-left: 10px;
-            overflow-y: auto;
-            height: calc(~'100vh - 50px');
-
-            .toggle-tooltip {
-                cursor: pointer;
-                border-radius: 50%;
-                padding: 5px;
-                opacity: 0.6;
-                color: #666;
-                text-decoration: none;
-
-                &:hover {
-                    opacity: 1;
-                }
-            }
-
-            .media-list {
-                .toggle-tooltip {
-                    opacity: 0.4;
-                    visibility: hidden;
-                    &:hover {
-                        opacity: 0.8;
-                    }
-                }
-
-                .media {
-                    padding: 3px 2px;
-                    margin-top: 2px;
-                }
-            }
-        }
-
-        .chat-sidebar-item-rooms {
-            .media {
-                margin: 0;
-
-                .media-left, .media-body {
-                    cursor: pointer;
-                }
-
-                p {
-                    min-height: 30px;
-                    margin-bottom: 0;
-                }
-
-                &.active {
-                    background: rgba(220, 220, 220, 0.2);
-                    cursor: default;
-
-                    .toggle-tooltip {
-                        opacity: 1;
-                        visibility: visible;
-                        &:hover {
-                            opacity: 0.8;
-                        }
-                    }
-                }
-
-                p {
-                    word-break: break-all;
-                }
-            }
-        }
-    }
-}
-
-// チャットメッセージ
-#chat-messages {
-    .message-list {
-        .message-item {
-            margin: 0;
-            padding: 10px 20px;
-            
-            .message-body {
-                word-break: break-word;
-                padding: 10px;
-
-                .chat-img-loading {
-                    height: 300px;
-                    opacity: 0;
-                }
-
-                img {
-                    max-width: 100%;
-                    max-height: 300px;
-                    border: 1px solid #ccc;
-                    border-radius: 5px;
-                    padding: 3px;
-                }
-            }
-        }    
-    }
-}
-
-// メッセージ投稿フォーム
-#chat-messages-form {
-    position: relative;
-    padding: 10px 10px 0 10px;
-    box-sizing: border-box;
-
-    textarea {
-        width: 100%;
-        max-width: 100%;
-        height: 2.5em;
-        resize: none;
-    }
-
-    button {
-        position: absolute;
-        bottom: -5px;
-        opacity: 1;
-        right: 0;
-        .__circle_box__(50px);
-    }
-}
-
-// ルーム詳細モーダル
-.room-detail {
-    div {
-        padding: 10px; 
-    }
-
-    .description {
-        min-height: 5em;
-        white-space: pre-wrap;
-    }
-}
-
-// ルーム画像編集モーダル
-.modal_room_edit_image {
-    text-align: center;
-
-    [chat-image-cliper] {
-        .__square_box__(250px);
-        border: 1px solid #ccc;
-        border-radius: 10px;
-    }
-}
+@import "../_common";
+@import "_sidebar";
+@import "_modal";
+@import "_message";
