--- a/src/ChatApp/wwwroot/templates/room/modal-room-detail.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-room-detail.html
@@ -1,4 +1,4 @@
-<div class="modal-body room-detail">
+<div class="modal-body modal_room_detail">
     <div class="modal-header">
         <h3 class="modal-title">
             <span>ルームの詳細</span>
