--- a/src/ChatApp/Features/Shared/_LoginPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_LoginPartial.cshtml
@@ -3,8 +3,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm"
-          class="navbar-right">
+    <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm">
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">
