--- a/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-fixed-top" id="chatapp-navbar">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">@Localizer["MENU"]</span>
