--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -1,7 +1,7 @@
 <div>
     <div chat-sidebar="{sm:3, xs:7}" chat-prefix="chat-sidebar">
-        <div ng-include="'../templates/room/sidebar-item-room.html'"></div>
-        <div ng-include="'../templates/room/sidebar-item-member.html'"></div>
+        <div ng-include="'/sidebar/room.tmpl.html'"></div>
+        <div ng-include="'/sidebar/member.tmpl.html'"></div>
     </div>
     <div class="col-sm-9 col-sm-offset-3" id="chat-room-main"
         chat-prefix="chat-messages"
@@ -10,11 +10,15 @@
         chat-room-change="RoomCtrl.ChangeRoom()"
         old-messages="RoomCtrl.GetOldmessages()">
         <div class="row" id="chat-messages">
-            <div ng-include="'../templates/room/chat-messages.html'"></div>
+            <div ng-include="'/chat/messages.tmpl.html'"></div>
         </div>
         <div class="row" id="chat-messages-form"
             ng-style="{visibility: c.room.message ? 'visible' : 'hidden'}">
-            <div ng-include="'../templates/room/chat-messages-form.html'"></div>
+            <div ng-include="'/chat/post-form.tmpl.html'"></div>
         </div>
     </div>
 </div>
+@await Html.PartialAsync("NgTmpl/_Chat")
+@await Html.PartialAsync("NgTmpl/_Sidebar")
+@await Html.PartialAsync("NgTmpl/Modal/_Room")
+@await Html.PartialAsync("NgTmpl/Modal/_Member")
