--- a/src/ChatApp/Features/Room/Views/NgTmpl/_Sidebar.cshtml
+++ b/src/ChatApp/Features/Room/Views/NgTmpl/_Sidebar.cshtml
@@ -21,14 +21,14 @@
 <script type="text/ng-template" id="/sidebar/room.tmpl.html">
     <div class="chat-sidebar-item chat-sidebar-item-rooms">
         <h4 class="title">
-            <span>ルーム</span>
+            <span>@VLocalizer["Room"]</span>
             <span class="pull-right small" uib-dropdown dropdown-append-to-body>
                 <a class="glyphicon glyphicon-align-justify toggle-tooltip" uib-dropdown-toggle></a>
                 <ul class="dropdown-menu" uib-dropdown-menu role="menu">
                     <li role="menuitem">
                         <a ng-click="RoomCtrl.OpenCreateRoom()">
                             <span class="glyphicon glyphicon-plus"></span>
-                            <span>ルームの作成</span>
+                            <span>@VLocalizer["Create room"]</span>
                         </a>
                     </li>
                 </ul>
@@ -51,25 +51,25 @@
                             <li role="menuitem">
                                 <a ng-click="RoomCtrl.OpenDetailRoom(r)">
                                     <span class="glyphicon glyphicon-list-alt"></span>
-                                    <span>ルームの詳細</span>
+                                    <span>@VLocalizer["Room detail"]</span>
                                 </a>
                             </li>
                             <li role="menuitem" ng-show="r.isAdmin">
                                 <a ng-click="RoomCtrl.OpenEditRoom(r)">
                                     <span class="glyphicon glyphicon-edit"></span>
-                                    <span>ルームの編集</span>
+                                    <span>@VLocalizer["Edit room"]</span>
                                 </a>
                             </li>
                             <li role="menuitem" ng-show="r.isAdmin">
                                 <a ng-click="RoomCtrl.OpenRoomImageEditDialog(r)">
                                     <span class="glyphicon glyphicon-picture"></span>
-                                    <span>ルームの画像</span>
+                                    <span>@VLocalizer["Edit image"]</span>
                                 </a>
                             </li>
                             <li role="menuitem" ng-show="r.isAdmin">
                                 <a ng-click="RoomCtrl.OpenRemoveRoom(r)">
                                     <span class="glyphicon glyphicon-trash"></span>
-                                    <span>ルームの削除</span>
+                                    <span>@VLocalizer["Delete room"]</span>
                                 </a>
                             </li>
                         </ul>
@@ -83,20 +83,20 @@
 <script type="text/ng-template" id="/sidebar/member.tmpl.html">
     <div class="chat-sidebar-item chat-sidebar-item-members">
         <h4 class="title">
-            <span>メンバー</span>
+            <span>@VLocalizer["Member"]</span>
             <span class="pull-right small" uib-dropdown dropdown-append-to-body ng-show="c.room.isAdmin">
                 <a class="glyphicon glyphicon-align-justify toggle-tooltip" uib-dropdown-toggle></a>
                 <ul class="dropdown-menu" uib-dropdown-menu role="menu">
                     <li role="menuitem">
                         <a ng-click="RoomCtrl.OpenAddMember()">
                             <i class="glyphicon glyphicon-plus"></i>
-                            <span>メンバー追加</span>
+                            <span>@VLocalizer["Add member"]</span>
                         </a>
                     </li>
                     <li role="menuitem">
                         <a ng-click="RoomCtrl.OpenRemoveMember()">
                             <i class="glyphicon glyphicon-trash"></i>
-                            <span>メンバー削除</span>
+                            <span>@VLocalizer["Remove member"]</span>
                         </a>
                     </li>
                 </ul>
