--- a/src/ChatApp/Features/_ViewImports.cshtml
+++ b/src/ChatApp/Features/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using static ChatApp.Helpers.UrlHelperExt
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IViewLocalizer VLocalizer
 @inject IHtmlLocalizer<ChatApp.SharedResources.SharedResource> Localizer
