--- a/src/ChatApp/Features/Room/Views/NgTmpl/_Chat.cshtml
+++ b/src/ChatApp/Features/Room/Views/NgTmpl/_Chat.cshtml
@@ -25,9 +25,14 @@
 
 <script type="text/ng-template" id="/chat/post-form.tmpl.html">
     <form name="chatForm" novalidate ng-submit="RoomCtrl.PostMessage()">
-        <textarea class="form-control" rows="1" tabindex="1"
+        <textarea class="form-control" tabindex="1"
             ng-maxlength="300"
-            ng-model="c.room.message.message" required></textarea>
+            ng-model="c.room.message.message"
+            ng-trim="false"
+            rows="1"
+            chat-auto-resize
+            chat-auto-resize-max-height="300"
+            required></textarea>
         <button class="btn btn-default" tabindex="2"
             ng-disabled="chatForm.$invalid || c.room.message.isPosting"
             ng-show="chatForm.$valid && !c.room.message.isPosting">GO</button>
