--- a/src/ChatApp/wwwdev/less/room/_message.less
+++ b/src/ChatApp/wwwdev/less/room/_message.less
@@ -31,17 +31,19 @@
     box-sizing: border-box;
 
     textarea {
-        width: 100%;
-        max-width: 100%;
-        height: 2.5em;
+        width: calc(~'100% - 18px');
+        max-width: calc(~'100% - 18px');
         resize: none;
     }
 
     button {
         position: absolute;
-        bottom: -5px;
+        top: 10px;
         opacity: 1;
         right: 0;
-        .__circle_box__(50px);
+        height: calc(~'100% - 10px');
+        font-size: 0.8em;
+        padding-left: 6px;
+        padding-right: 8px;
     }
 }
