--- a/src/ChatApp/wwwroot/css/room/main.css
+++ b/src/ChatApp/wwwroot/css/room/main.css
@@ -176,20 +176,17 @@ li[role="menuitem"] {
   box-sizing: border-box;
 }
 #chat-messages-form textarea {
-  width: 100%;
-  max-width: 100%;
-  height: 2.5em;
+  width: calc(100% - 18px);
+  max-width: calc(100% - 18px);
   resize: none;
 }
 #chat-messages-form button {
   position: absolute;
-  bottom: -5px;
+  top: 10px;
   opacity: 1;
   right: 0;
-  display: inline-block;
-  box-sizing: border-box;
-  width: 50px;
-  height: 50px;
-  overflow: hidden;
-  border-radius: 50%;
+  height: calc(100% - 10px);
+  font-size: 0.8em;
+  padding-left: 6px;
+  padding-right: 8px;
 }
