機能 #88 ボタンのスタイル変更

--- a/src/ChatApp/wwwroot/css/room/main.css
+++ b/src/ChatApp/wwwroot/css/room/main.css
@@ -187,6 +187,7 @@ li[role="menuitem"] {
   right: 0;
   height: calc(100% - 10px);
   font-size: 0.8em;
-  padding-left: 6px;
-  padding-right: 8px;
+  padding-left: 9px;
+  padding-right: 9px;
+  border-radius: 0 5px 5px 0;
 }
