--- a/src/ChatApp/wwwdev/less/room/_message.less
+++ b/src/ChatApp/wwwdev/less/room/_message.less
@@ -43,7 +43,8 @@
         right: 0;
         height: calc(~'100% - 10px');
         font-size: 0.8em;
-        padding-left: 6px;
-        padding-right: 8px;
+        padding-left: 9px;
+        padding-right: 9px;
+        border-radius: 0 5px 5px 0;
     }
 }
