機能 #92 scriptタグ、link(css)タグにasp-append-versionを付加

--- a/src/ChatApp/Features/Home/Index.cshtml
+++ b/src/ChatApp/Features/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 @section styles {
-    <link rel="stylesheet" href="~/css/home/main.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/home/main.css" />
 }
