--- a/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
+++ b/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
@@ -1,19 +1,19 @@
 <environment names="Development">
-    <script src="~/lib/angular/angular.js"></script>
-    <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="~/lib/marked/lib/marked.js"></script>
-    <script src="~/lib/angular-marked/dist/angular-marked.js"></script>
-    <script src="~/js/lib/imgCliper.js"></script>
-    <script src="~/js/room/app.js"></script>
-    <script src="~/js/room/directives.js"></script>
-    <script src="~/js/room/services.js"></script>
-    <script src="~/js/room/controllers.js"></script>
+    <script asp-append-version="true" src="~/lib/angular/angular.js"></script>
+    <script asp-append-version="true" src="~/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script asp-append-version="true" src="~/lib/marked/lib/marked.js"></script>
+    <script asp-append-version="true" src="~/lib/angular-marked/dist/angular-marked.js"></script>
+    <script asp-append-version="true" src="~/js/lib/imgCliper.js"></script>
+    <script asp-append-version="true" src="~/js/room/app.js"></script>
+    <script asp-append-version="true" src="~/js/room/directives.js"></script>
+    <script asp-append-version="true" src="~/js/room/services.js"></script>
+    <script asp-append-version="true" src="~/js/room/controllers.js"></script>
 </environment>
 <environment names="Staging,Production">
-    <script src="~/lib/angular/angular.min.js"></script>
-    <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="~/lib/marked/marked.min.js"></script>
-    <script src="~/lib/angular-marked/dist/angular-marked.min.js"></script>
-    <script src="~/js/lib/imgCliper.js"></script>
-    <script src="~/js/room/app.min.js"></script>
+    <script asp-append-version="true" src="~/lib/angular/angular.min.js"></script>
+    <script asp-append-version="true" src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script asp-append-version="true" src="~/lib/marked/marked.min.js"></script>
+    <script asp-append-version="true" src="~/lib/angular-marked/dist/angular-marked.min.js"></script>
+    <script asp-append-version="true" src="~/js/lib/imgCliper.js"></script>
+    <script asp-append-version="true" src="~/js/room/app.min.js"></script>
 </environment>
