--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -89,22 +89,22 @@
 @section styles
 {
     <environment names="Development">
-        <link rel="stylesheet" type="text/css" href="~/css/manage/index.css"/>
+        <link asp-append-version="true" rel="stylesheet" type="text/css" href="~/css/manage/index.css"/>
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" type="text/css" href="~/css/manage/index.min.css"/>
+        <link asp-append-version="true" rel="stylesheet" type="text/css" href="~/css/manage/index.min.css"/>
     </environment>
 }
 
 @section scripts
 {
     <environment names="Development">
-        <script type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
-        <script type="text/javascript" src="~/js/lib/imgCliper.js"></script>
-        <script type="text/javascript" src="~/js/manage/index.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/js/lib/imgCliper.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/js/manage/index.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <script type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
-        <script type="text/javascript" src="~/js/manage/index.min.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/js/manage/index.min.js"></script>
     </environment>
 }
