--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="~/favicon.ico" />
     <title ng-bind="c.room.name + ' - ChatApp'"></title>
     @await Html.PartialAsync("_StylesPartial")
-    <link rel="stylesheet" href="~/lib/angular-bootstrap/ui-bootstrap-csp.css" />
-    <link rel="stylesheet" href="~/css/room/main.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/lib/angular-bootstrap/ui-bootstrap-csp.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/room/main.css" />
     <base href="@Url.Content("~/Room/")" />
 </head>
 <body>
