--- a/src/ChatApp/Features/Shared/_StylesPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_StylesPartial.cshtml
@@ -1,10 +1,10 @@
 <environment names="Development">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
 </environment>
 <environment names="Staging,Production">
     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
           asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
           asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
 </environment>
