--- a/src/ChatApp/Features/Shared/_ValidationScriptsPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_ValidationScriptsPartial.cshtml
@@ -1,6 +1,6 @@
 <environment names="Development">
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script asp-append-version="true" src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script asp-append-version="true" src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </environment>
 <environment names="Staging,Production">
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"
