バグ #93 画像のリサイズの不具合修正
 * ズーム時の画像の震えを修正
 * 移動時にモーダルが閉じないように修正

--- a/src/ChatApp/Features/Room/Views/NgTmpl/Modal/_Room.cshtml
+++ b/src/ChatApp/Features/Room/Views/NgTmpl/Modal/_Room.cshtml
@@ -98,7 +98,8 @@
         </div>
         <div class="modal-main">
             <div>
-                <span class="clip-image" chat-image-cliper c:ctrl="ctrl" c:assign="c" c:option="{zoomStep: 10, imageType: 'image/png'}">
+                <span class="clip-image" chat-image-cliper c:ctrl="ctrl" c:assign="c"
+                    c:option="{zoomStep: 10, imageType: 'image/png', parentSelector: '.modal'}">
                     <img src="" />
                 </span>
             </div>
