レイアウト調整

--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -1,5 +1,5 @@
 <div>
-    <div chat-sidebar="{sm:3, xs:7}" chat-prefix="chat-sidebar">
+    <div chat-sidebar>
         <div ng-include="'/sidebar/room.tmpl.html'"></div>
         <div ng-include="'/sidebar/member.tmpl.html'"></div>
     </div>
