--- a/src/ChatApp/wwwdev/less/room/_sidebar.less
+++ b/src/ChatApp/wwwdev/less/room/_sidebar.less
@@ -97,5 +97,11 @@
                 }
             }
         }
+
+        .chat-sidebar-item-members {
+            .media-body {
+                vertical-align: middle;
+            }
+        }
     }
 }
