--- a/src/ChatApp/wwwroot/css/manage/index.css
+++ b/src/ChatApp/wwwroot/css/manage/index.css
@@ -6,15 +6,31 @@
     opacity: 1;
   }
 }
-* {
+@keyframes __border_link_hover_color_fade__ {
+  0% {
+    border-bottom-color: transparent;
+  }
+  100% {
+    border-bottom-color: #23527c;
+  }
+}
+body,
+html,
+div {
   box-sizing: border-box;
 }
-*::-webkit-scrollbar {
+body::-webkit-scrollbar,
+html::-webkit-scrollbar,
+div::-webkit-scrollbar {
   width: 7px;
   background: transparent;
 }
-*::-webkit-scrollbar-thumb,
-* thumb {
+body::-webkit-scrollbar-thumb,
+html::-webkit-scrollbar-thumb,
+div::-webkit-scrollbar-thumb,
+body thumb,
+html thumb,
+div thumb {
   background: rgba(200, 200, 200, 0.5);
   border-radius: 10px;
 }
