--- a/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
@@ -1,5 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-top" id="chatapp-navbar">
     <div class="container-fluid">
+        @await Html.PartialAsync("_NavbarLeftPartial")
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">@Localizer["MENU"]</span>
@@ -12,7 +13,9 @@
             </a>
         </div>
         <div class="navbar-collapse collapse">
-            @await Html.PartialAsync("_MenuPartial")
+            <ul class="nav navbar-nav">
+                @await Html.PartialAsync("_MenuPartial")
+            </ul>
             @await Html.PartialAsync("_LoginPartial")
         </div>
     </div>
